DeepDSL-Python-main/src/gen/deepDSLParser.py
# Generated from D:/Elmos/S4031/CompilerDesign/IUST-CompilerDesign-Project/src/Grammar/deepDSL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class deepDSLParser ( Parser ):

    grammarFileName = "deepDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'network'", "'{'", "'}'", "'layer'", 
                     "'training'", "'dataset'", "'visualize'", "'grid'", 
                     "':'", "'['", "','", "']'", "';'", "'evaluate'", "'optimizer'", 
                     "'adam'", "'sgd'", "'rmsprop'", "'loss'", "'SparseCategoricalCrossentropy'", 
                     "'MeanSquaredError'", "'metric'", "'accuracy'", "'epochs'", 
                     "'batch_size'", "'validation_split'", "'source'", "'preprocessing'", 
                     "'normalize'", "'type'", "'units'", "'activation'", 
                     "'Relu'", "'Sigmoid'", "'Softmax'", "'Tanh'", "'Linear'", 
                     "'input_shape'", "'Dense'", "'Flatten'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "INT", "FLOAT", "STRING", "WS", 
                      "COMMENT" ]

    RULE_start = 0
    RULE_network = 1
    RULE_layer = 2
    RULE_training = 3
    RULE_dataset = 4
    RULE_visualize = 5
    RULE_evaluate = 6
    RULE_optimizer = 7
    RULE_optimizer_func = 8
    RULE_loss = 9
    RULE_loss_func = 10
    RULE_metric_choice = 11
    RULE_metrics = 12
    RULE_epochs = 13
    RULE_batch_size = 14
    RULE_validation_split = 15
    RULE_source = 16
    RULE_preprocessing = 17
    RULE_preprocessing_func = 18
    RULE_types = 19
    RULE_units = 20
    RULE_activation = 21
    RULE_activation_func = 22
    RULE_input_shape = 23
    RULE_value = 24
    RULE_path = 25
    RULE_type = 26

    ruleNames =  [ "start", "network", "layer", "training", "dataset", "visualize", 
                   "evaluate", "optimizer", "optimizer_func", "loss", "loss_func", 
                   "metric_choice", "metrics", "epochs", "batch_size", "validation_split", 
                   "source", "preprocessing", "preprocessing_func", "types", 
                   "units", "activation", "activation_func", "input_shape", 
                   "value", "path", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    ID=41
    INT=42
    FLOAT=43
    STRING=44
    WS=45
    COMMENT=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def network(self):
            return self.getTypedRuleContext(deepDSLParser.NetworkContext,0)


        def EOF(self):
            return self.getToken(deepDSLParser.EOF, 0)

        def getRuleIndex(self):
            return deepDSLParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = deepDSLParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.network()
            self.state = 55
            self.match(deepDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NetworkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(deepDSLParser.ID, 0)

        def training(self):
            return self.getTypedRuleContext(deepDSLParser.TrainingContext,0)


        def layer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(deepDSLParser.LayerContext)
            else:
                return self.getTypedRuleContext(deepDSLParser.LayerContext,i)


        def dataset(self):
            return self.getTypedRuleContext(deepDSLParser.DatasetContext,0)


        def visualize(self):
            return self.getTypedRuleContext(deepDSLParser.VisualizeContext,0)


        def evaluate(self):
            return self.getTypedRuleContext(deepDSLParser.EvaluateContext,0)


        def getRuleIndex(self):
            return deepDSLParser.RULE_network

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetwork" ):
                listener.enterNetwork(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetwork" ):
                listener.exitNetwork(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNetwork" ):
                return visitor.visitNetwork(self)
            else:
                return visitor.visitChildren(self)




    def network(self):

        localctx = deepDSLParser.NetworkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_network)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(deepDSLParser.T__0)
            self.state = 58
            self.match(deepDSLParser.ID)
            self.state = 59
            self.match(deepDSLParser.T__1)
            self.state = 61 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 60
                self.layer()
                self.state = 63 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==4):
                    break

            self.state = 65
            self.training()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 66
                self.dataset()


            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 69
                self.visualize()


            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 72
                self.evaluate()


            self.state = 75
            self.match(deepDSLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(deepDSLParser.ID, 0)

        def types(self):
            return self.getTypedRuleContext(deepDSLParser.TypesContext,0)


        def units(self):
            return self.getTypedRuleContext(deepDSLParser.UnitsContext,0)


        def activation(self):
            return self.getTypedRuleContext(deepDSLParser.ActivationContext,0)


        def input_shape(self):
            return self.getTypedRuleContext(deepDSLParser.Input_shapeContext,0)


        def getRuleIndex(self):
            return deepDSLParser.RULE_layer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayer" ):
                listener.enterLayer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayer" ):
                listener.exitLayer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayer" ):
                return visitor.visitLayer(self)
            else:
                return visitor.visitChildren(self)




    def layer(self):

        localctx = deepDSLParser.LayerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_layer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(deepDSLParser.T__3)
            self.state = 78
            self.match(deepDSLParser.ID)
            self.state = 79
            self.match(deepDSLParser.T__1)
            self.state = 80
            self.types()
            self.state = 81
            self.units()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 82
                self.activation()


            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 85
                self.input_shape()


            self.state = 88
            self.match(deepDSLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TrainingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def optimizer(self):
            return self.getTypedRuleContext(deepDSLParser.OptimizerContext,0)


        def loss(self):
            return self.getTypedRuleContext(deepDSLParser.LossContext,0)


        def metric_choice(self):
            return self.getTypedRuleContext(deepDSLParser.Metric_choiceContext,0)


        def epochs(self):
            return self.getTypedRuleContext(deepDSLParser.EpochsContext,0)


        def batch_size(self):
            return self.getTypedRuleContext(deepDSLParser.Batch_sizeContext,0)


        def validation_split(self):
            return self.getTypedRuleContext(deepDSLParser.Validation_splitContext,0)


        def getRuleIndex(self):
            return deepDSLParser.RULE_training

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTraining" ):
                listener.enterTraining(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTraining" ):
                listener.exitTraining(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTraining" ):
                return visitor.visitTraining(self)
            else:
                return visitor.visitChildren(self)




    def training(self):

        localctx = deepDSLParser.TrainingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_training)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(deepDSLParser.T__4)
            self.state = 91
            self.match(deepDSLParser.T__1)
            self.state = 92
            self.optimizer()
            self.state = 93
            self.loss()
            self.state = 94
            self.metric_choice()
            self.state = 95
            self.epochs()
            self.state = 96
            self.batch_size()
            self.state = 97
            self.validation_split()
            self.state = 98
            self.match(deepDSLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DatasetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(deepDSLParser.ID, 0)

        def source(self):
            return self.getTypedRuleContext(deepDSLParser.SourceContext,0)


        def preprocessing(self):
            return self.getTypedRuleContext(deepDSLParser.PreprocessingContext,0)


        def getRuleIndex(self):
            return deepDSLParser.RULE_dataset

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataset" ):
                listener.enterDataset(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataset" ):
                listener.exitDataset(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataset" ):
                return visitor.visitDataset(self)
            else:
                return visitor.visitChildren(self)




    def dataset(self):

        localctx = deepDSLParser.DatasetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dataset)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(deepDSLParser.T__5)
            self.state = 101
            self.match(deepDSLParser.ID)
            self.state = 102
            self.match(deepDSLParser.T__1)
            self.state = 103
            self.source()
            self.state = 104
            self.preprocessing()
            self.state = 105
            self.match(deepDSLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VisualizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(deepDSLParser.ValueContext)
            else:
                return self.getTypedRuleContext(deepDSLParser.ValueContext,i)


        def getRuleIndex(self):
            return deepDSLParser.RULE_visualize

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVisualize" ):
                listener.enterVisualize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVisualize" ):
                listener.exitVisualize(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVisualize" ):
                return visitor.visitVisualize(self)
            else:
                return visitor.visitChildren(self)




    def visualize(self):

        localctx = deepDSLParser.VisualizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_visualize)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(deepDSLParser.T__6)
            self.state = 108
            self.match(deepDSLParser.T__1)
            self.state = 109
            self.match(deepDSLParser.T__7)
            self.state = 110
            self.match(deepDSLParser.T__8)
            self.state = 111
            self.match(deepDSLParser.T__9)
            self.state = 112
            self.value()
            self.state = 113
            self.match(deepDSLParser.T__10)
            self.state = 114
            self.value()
            self.state = 115
            self.match(deepDSLParser.T__11)
            self.state = 116
            self.match(deepDSLParser.T__12)
            self.state = 117
            self.match(deepDSLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EvaluateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def metric_choice(self):
            return self.getTypedRuleContext(deepDSLParser.Metric_choiceContext,0)


        def getRuleIndex(self):
            return deepDSLParser.RULE_evaluate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvaluate" ):
                listener.enterEvaluate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvaluate" ):
                listener.exitEvaluate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEvaluate" ):
                return visitor.visitEvaluate(self)
            else:
                return visitor.visitChildren(self)




    def evaluate(self):

        localctx = deepDSLParser.EvaluateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_evaluate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(deepDSLParser.T__13)
            self.state = 120
            self.match(deepDSLParser.T__1)
            self.state = 121
            self.metric_choice()
            self.state = 122
            self.match(deepDSLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptimizerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def optimizer_func(self):
            return self.getTypedRuleContext(deepDSLParser.Optimizer_funcContext,0)


        def getRuleIndex(self):
            return deepDSLParser.RULE_optimizer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptimizer" ):
                listener.enterOptimizer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptimizer" ):
                listener.exitOptimizer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptimizer" ):
                return visitor.visitOptimizer(self)
            else:
                return visitor.visitChildren(self)




    def optimizer(self):

        localctx = deepDSLParser.OptimizerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_optimizer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(deepDSLParser.T__14)
            self.state = 125
            self.match(deepDSLParser.T__8)
            self.state = 126
            self.optimizer_func()
            self.state = 127
            self.match(deepDSLParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Optimizer_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return deepDSLParser.RULE_optimizer_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptimizer_func" ):
                listener.enterOptimizer_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptimizer_func" ):
                listener.exitOptimizer_func(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptimizer_func" ):
                return visitor.visitOptimizer_func(self)
            else:
                return visitor.visitChildren(self)




    def optimizer_func(self):

        localctx = deepDSLParser.Optimizer_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_optimizer_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 458752) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LossContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def loss_func(self):
            return self.getTypedRuleContext(deepDSLParser.Loss_funcContext,0)


        def getRuleIndex(self):
            return deepDSLParser.RULE_loss

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoss" ):
                listener.enterLoss(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoss" ):
                listener.exitLoss(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoss" ):
                return visitor.visitLoss(self)
            else:
                return visitor.visitChildren(self)




    def loss(self):

        localctx = deepDSLParser.LossContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_loss)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(deepDSLParser.T__18)
            self.state = 132
            self.match(deepDSLParser.T__8)
            self.state = 133
            self.loss_func()
            self.state = 134
            self.match(deepDSLParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loss_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return deepDSLParser.RULE_loss_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoss_func" ):
                listener.enterLoss_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoss_func" ):
                listener.exitLoss_func(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoss_func" ):
                return visitor.visitLoss_func(self)
            else:
                return visitor.visitChildren(self)




    def loss_func(self):

        localctx = deepDSLParser.Loss_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_loss_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            _la = self._input.LA(1)
            if not(_la==20 or _la==21):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Metric_choiceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def metrics(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(deepDSLParser.MetricsContext)
            else:
                return self.getTypedRuleContext(deepDSLParser.MetricsContext,i)


        def getRuleIndex(self):
            return deepDSLParser.RULE_metric_choice

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetric_choice" ):
                listener.enterMetric_choice(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetric_choice" ):
                listener.exitMetric_choice(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetric_choice" ):
                return visitor.visitMetric_choice(self)
            else:
                return visitor.visitChildren(self)




    def metric_choice(self):

        localctx = deepDSLParser.Metric_choiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_metric_choice)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(deepDSLParser.T__21)
            self.state = 139
            self.match(deepDSLParser.T__8)
            self.state = 140
            self.match(deepDSLParser.T__9)
            self.state = 141
            self.metrics()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 142
                self.match(deepDSLParser.T__10)
                self.state = 143
                self.metrics()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(deepDSLParser.T__11)
            self.state = 150
            self.match(deepDSLParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetricsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return deepDSLParser.RULE_metrics

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetrics" ):
                listener.enterMetrics(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetrics" ):
                listener.exitMetrics(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetrics" ):
                return visitor.visitMetrics(self)
            else:
                return visitor.visitChildren(self)




    def metrics(self):

        localctx = deepDSLParser.MetricsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_metrics)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            _la = self._input.LA(1)
            if not(_la==19 or _la==23):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EpochsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(deepDSLParser.ValueContext,0)


        def getRuleIndex(self):
            return deepDSLParser.RULE_epochs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEpochs" ):
                listener.enterEpochs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEpochs" ):
                listener.exitEpochs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEpochs" ):
                return visitor.visitEpochs(self)
            else:
                return visitor.visitChildren(self)




    def epochs(self):

        localctx = deepDSLParser.EpochsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_epochs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(deepDSLParser.T__23)
            self.state = 155
            self.match(deepDSLParser.T__8)
            self.state = 156
            self.value()
            self.state = 157
            self.match(deepDSLParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Batch_sizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(deepDSLParser.ValueContext,0)


        def getRuleIndex(self):
            return deepDSLParser.RULE_batch_size

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBatch_size" ):
                listener.enterBatch_size(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBatch_size" ):
                listener.exitBatch_size(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBatch_size" ):
                return visitor.visitBatch_size(self)
            else:
                return visitor.visitChildren(self)




    def batch_size(self):

        localctx = deepDSLParser.Batch_sizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_batch_size)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(deepDSLParser.T__24)
            self.state = 160
            self.match(deepDSLParser.T__8)
            self.state = 161
            self.value()
            self.state = 162
            self.match(deepDSLParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Validation_splitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(deepDSLParser.ValueContext,0)


        def getRuleIndex(self):
            return deepDSLParser.RULE_validation_split

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValidation_split" ):
                listener.enterValidation_split(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValidation_split" ):
                listener.exitValidation_split(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValidation_split" ):
                return visitor.visitValidation_split(self)
            else:
                return visitor.visitChildren(self)




    def validation_split(self):

        localctx = deepDSLParser.Validation_splitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_validation_split)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(deepDSLParser.T__25)
            self.state = 165
            self.match(deepDSLParser.T__8)
            self.state = 166
            self.value()
            self.state = 167
            self.match(deepDSLParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SourceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def path(self):
            return self.getTypedRuleContext(deepDSLParser.PathContext,0)


        def getRuleIndex(self):
            return deepDSLParser.RULE_source

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSource" ):
                listener.enterSource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSource" ):
                listener.exitSource(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSource" ):
                return visitor.visitSource(self)
            else:
                return visitor.visitChildren(self)




    def source(self):
